Fixed 1st times

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <div class="container header-flex">
         <div class="header-left">
           <h1 class="header-title">10,000+ of our users love our products.</h1>
-          <h5 class="header-paragraph">We only provide great products combined with excellent customer service.
-          See what our satisfied customers are saying about our services.</h5>
+          <p class="header-paragraph">We only provide great products combined with excellent customer service.
+          See what our satisfied customers are saying about our services.</p>
         </div>
         <div class="header-right">
           <div class="header-card">
